--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,23 @@
 {
   "name": "server",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node app",
+    "run":"app.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "bcrypt": "^5.1.1",
+    "cores": "^0.8.5",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "express-sessions": "^1.0.6",
+    "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "finnhub": "^1.2.18",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "mysql2": "^3.9.1"
+    "mongodb": "^6.5.0"
   }
 }
